feat(mitra-job-vacancies): add CRUD API for mitra to manage job vacancies
